--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <div class = section>
 
 	<h3>Screenwriting</h3>
-		<p>A draft of a feature film: <span class = "blue"><a href = "pdf/BuchananCounty.pdf" target="_blank" rel="noopener noreferrer"><i>Buchanan County</i></a></span>. A young man is torn between staying with his high school boyfriend in rural Appalachia and pursuing a more liberated life in the city — but he finds that no matter where he goes, he is confined by his class and expected to set either his heritage or his sexuality aside.</p>
+		<p>A draft of a feature film: <span class = "blue"><a href = "pdf/TableRead1.pdf" target="_blank" rel="noopener noreferrer"><i>Buchanan County</i></a></span>. A young man is torn between staying with his high school boyfriend in rural Appalachia and pursuing a more liberated life in the city — but he finds that no matter where he goes, he is confined by his class and expected to set either his heritage or his sexuality aside.</p>
 	</br>
 
 	<h3>Fiction</h3>
